add players names

--- a/dicee.html
+++ b/dicee.html
@@ -16,12 +16,12 @@
       <h1>Click Play Button!</h1>
 
       <div class="dice">
-        <p>Player 1</p>
+        <p class="player1">Player 1</p>
         <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
-        <p>Player 2</p>
+        <p class="player2">Player 2</p>
         <img class="img2" src="images/dice6.png">
       </div>
 
